--- a/infra/.env
+++ b/infra/.env
@@ -1,11 +1,3 @@
-# Airflow
-AIRFLOW_UID=50000
-AIRFLOW_PROJ_DIR=../source/airflow
-_AIRFLOW_WWW_USER_USERNAME=airflow
-_AIRFLOW_WWW_USER_PASSWORD=airflow
-
-# Mongodb
-MONGO_INITDB_ROOT_USERNAME=root
-MONGO_INITDB_ROOT_PASSWORD=airflow
-ME_CONFIG_BASICAUTH_USERNAME=root
-ME_CONFIG_BASICAUTH_PASSWORD=airflow
+POSTGRES_USERNAME=postgres
+POSTGRES_PASSWORD=a1b2c3
+POSTGRES_DB=mlec3
